--- a/index.html
+++ b/index.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Richard Cesar</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <main>
+        <div><h1>Richard</h1></div>
+        <div><h1>Sobre Mim</h1></div>
+        <div><h1>Formação</h1></div>
+        <div><h1>Projetos</h1></div>
+        <div><h1>Contato</h1></div>
+    </main>
 </body>
+
 </html>
