styles and information

--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
 
 <body>
     <main>
-        <div><h1>Richard</h1></div>
-        <div><h1>Sobre Mim</h1></div>
-        <div><h1>Formação</h1></div>
-        <div><h1>Projetos</h1></div>
-        <div><h1>Contato</h1></div>
+        <div class="name"><h1>Richard Cesar</h1></div>
+        <div class="navbar">
+            <div class="about">Sobre Mim</div>
+            <div class="form">Formação</div>
+            <div class="projects">Projetos</div>
+            <div class="contact">Contato</div>
+        </div>
     </main>
 </body>
 
